<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".DetailActivity">

    <View
        android:layout_marginTop="70dp"
        android:layout_width="wrap_content"
        android:layout_height="710dp"
        android:background="@drawable/bgdetail"
        />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:elevation="0dp">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_page"
                android:fontFamily="@font/mmedium"
                android:textSize="18sp"
                android:textColor="@android:color/white"/>


        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <FrameLayout
                android:id="@+id/fl_image_detail"
                android:layout_marginTop="50dp"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/image_shape">

                <ImageView
                    android:id="@+id/iv_image_detail"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/dummy_image_detail"
                    android:scaleType="fitCenter"/>
            </FrameLayout>

            <TextView
                android:id="@+id/tv_title_detail"
                style="@style/TextContent"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/fl_image_detail"
                android:text="@string/title_detail"
                android:fontFamily="@font/mbold"
                android:textColor="@android:color/white"
                android:textSize="28sp"/>

            <TextView
                android:id="@+id/tv_desc_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title_detail"
                android:layout_marginTop="15dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/desc_title"
                android:textSize="14sp"
                android:fontFamily="@font/mlight"
                android:textAlignment="center"
                android:textColor="@color/descColor"
                android:maxLines="6"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_desc_detail"
                android:layout_marginStart="23dp"
                android:layout_marginEnd="23dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:padding="24dp"
                android:layout_marginTop="34dp"
                android:background="@drawable/shape_detail">

                <TextView
                    style="@style/TextContent.descGroupTitle"
                    android:layout_marginTop="0dp"
                    android:text="@string/desc_position"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextContent.descGroupDetail"
                            android:text="@string/month_now"/>

                        <TextView
                            android:id="@+id/tv_position_now"
                            style="@style/TextContent.position"
                            android:text="@string/position_now" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="122dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextContent.descGroupDetail"
                            android:text="@string/month_then"/>

                        <TextView
                            android:id="@+id/tv_position_then"
                            style="@style/TextContent.position"
                            android:text="@string/position_then" />

                    </LinearLayout>

                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextContent.descGroupTitle"
                            android:text="@string/desc_rating"/>

                        <TextView
                            android:id="@+id/tv_desc_rating"
                            style="@style/TextContent.descGroupDetail"
                            android:text="@string/rating_now"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="122dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextContent.descGroupTitle"
                            android:text="@string/desc_change"/>

                        <TextView
                            android:id="@+id/tv_desc_change"
                            style="@style/TextContent.descGroupDetail"
                            android:text="@string/change_now"/>

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    style="@style/TextContent.descGroupTitle"
                    android:text="@string/desc_designed"/>

                <TextView
                    android:id="@+id/tv_desc_designer"
                    style="@style/TextContent.descGroupDetail"
                    android:text="@string/designer"/>

                <TextView
                    style="@style/TextContent.descGroupTitle"
                    android:text="@string/desc_developer"/>

                <TextView
                    android:id="@+id/tv_desc_developer"
                    style="@style/TextContent.descGroupDetail"
                    android:text="@string/developer"/>

                <TextView
                    style="@style/TextContent.descGroupTitle"
                    android:text="@string/desc_released"/>

                <TextView
                    android:id="@+id/tv_desc_released"
                    style="@style/TextContent.descGroupDetail"
                    android:text="@string/released"/>

            </LinearLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>