<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_top"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_list_prolang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:elevation="3dp"
        android:background="@drawable/shape_item"
        android:padding="15dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_prolang_position"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            style="@style/TextContent.item"
            android:text="@string/no_top"
            android:textAlignment="viewStart"/>

        <ImageView
            android:id="@+id/iv_prolang_change"
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:src="@drawable/strip"/>

        <TextView
            android:id="@+id/tv_prolang_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            style="@style/TextContent.item"
            android:text="@string/name_top"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tv_prolang_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            style="@style/TextContent.item"
            android:text="@string/rating_top"
            android:textAlignment="viewStart"/>

    </LinearLayout>
</RelativeLayout>