<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgapp"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:id="@+id/tv_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_title"
                android:textSize="28sp"
                android:textAllCaps="true"
                android:fontFamily="@font/mbold"
                android:textColor="@android:color/white"/>

            <ImageView
                android:id="@+id/iv_icon_app"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="@dimen/activity_horizontal_margins"
                android:src="@drawable/iconapp"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile_picture"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margins"
                android:layout_gravity="right"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_picture"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:id="@+id/ll_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_marginBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/topten_prolang"
                    android:textSize="22sp"
                    android:textColor="@color/BluePrimary"
                    android:fontFamily="@font/mmedium"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/topten_date"
                    android:textSize="20sp"
                    android:textColor="@color/BluePrimary"
                    android:fontFamily="@font/mlight"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_list_top"
                android:layout_below="@id/ll_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_row_list_top"/>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>